# CaroTitanMI3060

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: board.cpp  board.h  heuristic.cpp  heuristic.h  minimax.cpp  minimax.h
src/ui/: game_windows.cpp  game_windows.h  menu_windows.cpp  menu_windows.h  renderer.cpp  renderer.h
